<resources>
    <string name="app_name">Easypass</string>

    <!--dropbox token and permissions-->
    <string name="prefs_dbx_access_token">dbx-access-token</string>
    <string name="dbx_app_key">oqxuv1moxa6ew26</string>
    <string name="dbx_app_key_manifest">db-oqxuv1moxa6ew26</string>
    <string name="dbx_request_config_name">Easypass/2.0</string>

    <!--general-->
    <string name="title_activity_load">Login</string>
    <string name="title_account_list">Accounts</string>
    <string name="title_account_detail">Account Detail</string>
    <string name="title_account_edit">Account Edit</string>
    <string name="title_account_new">New Account</string>

    <!--account details-->
    <string name="account_infos_header">Infos</string>
    <string name="account_name_txt">Name</string>
    <string name="account_pseudo_txt">Pseudo</string>
    <string name="account_email_txt">Email</string>
    <string name="account_password_txt">Password</string>
    <string name="account_show_passwd_txt">Show password</string>
    <string name="account_created_date_txt">Created on</string>
    <string name="account_modified_date_txt">Modified on</string>
    <string name="account_notes_txt">Notes</string>
    <string name="header_new_session"><![CDATA[<strong>Welcome to EasyPass!</strong><br><br>
    It is time to choose your master password.
    <small><i>Watch out ! </i>There is no way to recover a lost password.</i></small>]]></string>
    <string name="header_new_session_long"><![CDATA[<h1>Welcome to EasyPass!</h1><br>
    It is time to choose your master password.<br><br>
    <i>Watch out ! </i>There is no way to recover a lost password.
    Ensure your master pass is <b>strong enough</b>, but not too hard to remember :).]]></string>
    <string name="start_quote">“Passwords are like underwear: you don’t let people see it, you should change it very often, and you shouldn’t share it with strangers.”</string>
    <string name="start_quote_author">– Chris Pirillo</string>
    <string name="fmt_copy_xx"><![CDATA[Copy %1$s <small><font color=\'#888888\'>%2$s</font></small>]]></string>
    <string name="title_activity_settings">Settings</string>
    <string name="account_list_counter_text_single">%1$d account</string>
    <string name="account_list_counter_text">%1$d accounts</string>

    <!--changelog library-->
    <string name="whatsnew_title">HOWDY,\nAN UPDATE!</string>
    <string name="changelog_title">CHANGELOG</string>
</resources>
