<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!--gridlayout with two columns-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="4dp"
        android:columnCount="2"
        android:useDefaultMargins="false">

        <!--infos header-->
        <TextView
            android:layout_columnSpan="2"
            style="@style/header"
            android:text="@string/account_infos_header" />

        <View
            style="@style/divider"
            android:layout_columnSpan="2"
            android:layout_marginBottom="10dp" />

        <!--name-->
        <TextView
            style="@style/details_label"
            android:text="@string/account_name_txt" />

        <TextView
            android:id="@+id/details_name"
            style="@style/details_value"  />
        <!--pseudo-->
        <TextView
            style="@style/details_label"
            android:text="@string/account_pseudo_txt" />

        <TextView
            android:id="@+id/details_pseudo"
            style="@style/details_value"
            android:text="haskellyna" />

        <!--email-->
        <TextView
            style="@style/details_label"
            android:text="@string/account_email_txt" />

        <TextView
            android:id="@+id/details_email"
            style="@style/details_value"
            android:text="example@lala.com"/>

        <!--password-->
        <TextView
            style="@style/details_label"
            android:text="@string/account_password_txt" />

        <TextView
            style="@style/details_value"
            android:id="@+id/details_password" />

        <!--show password-->
        <CheckBox
            style="@style/details_font"
            android:id="@+id/details_show_password"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/account_show_passwd_txt"

            />

        <!--notes header-->
        <TextView
            style="@style/header"
            android:layout_columnSpan="2"
            android:text="@string/account_notes_txt" />

        <View
            style="@style/divider"
            android:layout_marginBottom="10dp"
            android:layout_columnSpan="2" />


        <!--notes field-->
        <TextView
            android:layout_columnSpan="2"
            android:id="@+id/details_notes"
            style="@style/details_font"
            android:padding="5dp" />

        <View
            style="@style/divider"
            android:layout_marginBottom="10dp"
            android:layout_columnSpan="2" />

        <!--metadata field-->
        <TextView
            android:layout_columnSpan="2"
            android:id="@+id/details_metadata"
            style="@style/details_font"
            android:padding="5dp" />

    </GridLayout>
</LinearLayout>